# 3Dcarousel-hyprland

./: .envrc  .gitignore  API_COMPATIBILITY_NOTES.md  BUILD-COMMANDS.md  CLAUDE.md  CMakeLists-fixed.txt  CMakeLists-minimal.txt  CMakeLists.txt  DEBUG_PLUGIN.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  QUICK-START.md  QUICK_INSTALL.md  README.md  TEST_COMMANDS.md  TEST_CONFIGURATION.conf  debug-compositor.conf  debug-rendering.conf  enable-plugin-fixed.conf  enable-plugin-no-compositor.conf  enable-plugin-simplified.conf  enable-plugin-with-visuals.conf  enable-plugin.conf  flake-simplified.nix  flake.nix  git-commit-commands.sh  hyprland-carousel-plugin.md  hyprland-config-snippet.conf  justfile  nixos-module.nix  test-event-based.conf  test-latest-rendering.conf  test-official-api.conf  test-plugin.sh  test-rendering-fix.conf
build-hook/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-minimal/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-minimal/src/: AnimationEngine.cpp  AnimationEngine.hpp  CarouselRenderer.cpp  WorkspaceManager.cpp  WorkspaceManager.hpp
build-simple/: CMakeCache.txt  Makefile  cmake_install.cmake
build-thumbnail/: CMakeCache.txt  build.ninja  cmake_install.cmake
docs/: README.md  api.md  configuration.md  installation.md  troubleshooting.md  usage.md
examples/: hyprland-basic.conf  hyprland-performance.conf  hyprland-visual.conf  nixos-advanced.nix  nixos-basic.nix
include/: hyprland_fallback.hpp  plugin.hpp
src/: CarouselRenderer.cpp  CarouselRenderer.hpp  WorkspaceManager.cpp  main-hook-based.cpp  main-improved.cpp  main-minimal-test.cpp  main-minimal.cpp  main-simplified.cpp  main-with-thumbnails.cpp  main.cpp  opengl-test.cpp
